--- a/themes/geoweaver/layouts/blog/single.html
+++ b/themes/geoweaver/layouts/blog/single.html
@@ -62,11 +62,11 @@
             </div>
           </div>
           <!-- comments -->
-          {{ if site.DisqusShortname }}
-            <div class="mt-20">
-              {{ template "_internal/disqus.html" . }}
-            </div>
-          {{ end }}
+<!--          {{ if site.DisqusShortname }}-->
+<!--            <div class="mt-20">-->
+<!--              {{ template "_internal/disqus.html" . }}-->
+<!--            </div>-->
+<!--          {{ end }}-->
         </article>
       </div>
 
