--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -234,7 +234,7 @@
 
   <div class="flex-grow">
     <div class="text-center">
-      <p class="font-mono text-xl text-center justify-center pt-10">Goodness of Python 🐍, for every <a class="font-bold">WORKFLOW.</a> </p>
+      <p class="font-mono text-xl text-center justify-center pt-10">Goodness of Python 🐍, for every <span class="font-bold">WORKFLOW.</span> </p>
       <h1 class="pt-1 font-mono tracking-wide">Pygeoweaver</h1>
 
       <div class="flex items-center justify-center pt-5">
@@ -252,7 +252,7 @@
       <div class="flex items-center justify-center">
         <div class="flex bg-white rounded pt-2 pb-2 pl-4 pr-4 max-w-[450px] border-2 border-[#FEC600]">
           <div>
-            <p class="font-mono"><a class="font-bold">$ </a>pip install pygeoweaver</p>
+            <p class="font-mono"><span class="font-bold">$ </span>pip install pygeoweaver</p>
           </div>
           {{ $image := resources.Get "images/landing-page/clipboard-copy-done-tick.png" }}
           <div id="copy-install-text" class="h-[20px] w-[20px] cursor-pointer ml-5 pt-1" data-image-url="{{ $image.Permalink }}">
@@ -271,7 +271,7 @@
       <div class="flex items-center justify-center">
         <div class="flex bg-white rounded pt-2 pb-2 pl-4 pr-4 w-[320px] border-2 border-[#FEC600] justify-between"> <!-- Added justify-between class -->
           <div>
-            <p class="font-mono"><a class="font-bold">$ </a>gw start</p>
+            <p class="font-mono"><span class="font-bold">$ </span>gw start</p>
           </div>
           {{ $image := resources.Get "images/landing-page/clipboard-copy-done-tick.png" }}
           <div id="copy-get-started-text" class="h-[20px] w-[20px] cursor-pointer ml-5 pt-1" data-image-url="{{ $image.Permalink }}">
@@ -280,9 +280,9 @@
         </div>
       </div>
 
-      <a href="https://pygeoweaver.readthedocs.io/en/latest/">
-        <button class='transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 pygeoweaver-learn-more text-white p-2 rounded w-36 mt-8 mb-10 max-w-full'>
-          Learn More
+      <a href="https://pygeoweaver.readthedocs.io/en/latest/" class="">
+        <button class='transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 pygeoweaver-learn-more text-white p-2 rounded w-48 mt-8 mb-10 max-w-full'>
+          Read Documentation
         </button>
       </a>
     </div>
