--- a/themes/geoweaver/layouts/publications/publications.html
+++ b/themes/geoweaver/layouts/publications/publications.html
@@ -1,5 +1,4 @@
 {{ define "main" }}
-<!--{{ partial "page-header" . }}-->
 
 <section>
   <div class="container">
@@ -19,7 +18,6 @@
             <p class="font-sans font-bold text-2xl">{{ $publication.title }}</p>
             <p>{{ $publication.authors }}</p>
             <p><a href="{{ $publication.linkToManuscript }}" class="text-blue-500">{{ $publication.linkToManuscript }}</a></p>
-            <p>{{$publication.type}}</p>
           </div>
           {{ end }}
         </div>
@@ -30,13 +28,47 @@
         <hr />
 
         <div>
+          {{ range $index, $book := .Params.books }}
+            <div class="flex m-3">
+              <div>
+                <img
+                  width="175 rem"
+                  src="{{ $book.image }}"
+                />
+              </div>
+              <div class="pl-10 max-w-3xl">
+                <p class="text-2xl font-bold">{{$book.title}}</p>
+                <p class="pt-1">{{ $book.authors }}</p>
+                <a target="_blank" href="{{ $book.bookUrl }}"><p class="text-blue-500">{{ $book.bookUrl }}</p></a>
 
+                <p class="mt-5 font-heebo font-bold">About the Book: </p>
+                <p class="line-clamp-3">{{ $book.aboutBook }}</p>
+                <a href="{{ $book.aboutBookReadMoreUrl }}" target="_blank"> <p class="text-blue-500">Read More...</p> </a>
+              </div>
+            </div>
+          {{ end }}
         </div>
       </div>
 
-      <div class="pt-5">
+      <div class="pt-5 pb-24">
         <h4>Article & Resources</h4>
         <hr />
+
+        <div>
+          {{ range $index, $publication := .Params.articles}}
+          {{ if and (eq $publication.type "Article") (mod $index 2) }}
+          <div class="bg-gray-50 p-5">
+            {{ else }}
+            <div class="pl-5 pt-5">
+              {{ end }}
+              <p class="font-sans font-bold text-2xl">{{ $publication.title }}</p>
+              <p>{{ $publication.authors }}</p>
+              <p><a target="_blank"  href="{{ $publication.linkToArticle}}" class="text-blue-500">View Article</a></p>
+            </div>
+            {{ end }}
+          </div>
+        </div>
+
       </div>
 
     </div>
