--- a/themes/geoweaver/layouts/publications/publications.html
+++ b/themes/geoweaver/layouts/publications/publications.html
@@ -38,7 +38,7 @@
               </div>
               <div class="pl-10 max-w-3xl">
                 <p class="text-2xl font-bold">{{$book.title}}</p>
-                <p class="pt-1">{{ $book.authors }}</p>
+                <p class="pt-1">{{ $book.editors }}</p>
                 <a target="_blank" href="{{ $book.bookUrl }}"><p class="text-blue-500">{{ $book.bookUrl }}</p></a>
 
                 <p class="mt-5 font-heebo font-bold">About the Book: </p>
