--- a/themes/geoweaver/layouts/partials/essentials/footer.html
+++ b/themes/geoweaver/layouts/partials/essentials/footer.html
@@ -4,6 +4,7 @@
       <div class="lg:col-3 mb-8 text-center lg:mb-0 lg:text-left">
         <!-- navbar brand/logo -->
         <a
+          style="width: 50px; height: 50px;"
           class="navbar-brand inline-block"
           href="{{ site.Home.RelPermalink }}">
           {{ partial "logo" }}
