--- a/themes/geoweaver/layouts/partials/essentials/header.html
+++ b/themes/geoweaver/layouts/partials/essentials/header.html
@@ -4,7 +4,7 @@
     <!-- logo -->
     <div class="order-0">
       <!-- navbar brand/logo -->
-      <a class="navbar-brand block" href="{{ site.Home.RelPermalink }}">
+      <a style="width: 50px; height: 50px;" class="navbar-brand block" href="{{ site.Home.RelPermalink }}">
         {{ partial "logo" }}
       </a>
     </div>
