--- a/themes/geoweaver/layouts/partials/essentials/style.html
+++ b/themes/geoweaver/layouts/partials/essentials/style.html
@@ -19,6 +19,8 @@
 {{ $sf:= site.Data.theme.fonts.font_family.secondary }}
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 <script>
   (function () {
     const googleFont = document.createElement("link");
