adjust video screen size

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -53,7 +53,7 @@
 
 <section>
   <div class="justify-center flex p-5 rounded">
-    <iframe class="rounded" width="95%" height="700px" src="https://www.youtube.com/embed/6G000WADL7o?si=a0hN2gPi6DkCA0NC&autoplay=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe class="rounded-xl" width="61%" height="500px" src="https://www.youtube.com/embed/6G000WADL7o?si=a0hN2gPi6DkCA0NC&autoplay=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </section>
 
@@ -84,8 +84,8 @@
 
 <section>
   <div class='pl-48 mt-10'>
-    <h3 class='font-mono font-bold tracking-wider text-center'>Why choose Geoweaver?</h3>
-    <div class='mt-5 grid grid-cols-3 grid-flow-row gap-4'>
+    <h3 class='font-archivo font-bold tracking-wider text-center'>Why choose <span class="underline underline-offset-8 decoration-wavy decoration-[#337ac1]"> Geoweaver? <span> </h3>
+    <div class='mt-20 grid grid-cols-3 grid-flow-row gap-4'>
 
       <div class='inline-flex'>
         <div style='width: 45px; height: 45px;'>
