change web ui image

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -143,7 +143,7 @@
 
         </div>
         <div class='pl-10 flex flex-col text-center max-w-lg' style='width: 220px; height: 220px;'>
-          <div class="mt-4"> {{ partial "image" (dict "Src" .webUIImage "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-2" "Width" "10px" "Height" "10px") }}</div>
+          <div class="mt-4"> {{ partial "image" (dict "Src" .webUIImageNew "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-2" "Width" "10px" "Height" "10px") }}</div>
           <div class='mt-6 w-56'>In-Built Web UI with full support for Python</div>
         </div>
       </div>
@@ -264,7 +264,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center justify-center mt-5 ml-[-270px]"> <!-- Adjusted margin top -->
+      <div class="flex flex-col items-center justify-center mt-5 ml-[-270px]">
         <p class="font-archivo italic font-bold">Get Started</p>
         <div class="w-[60px] mt-[-14px]">
           {{ partial "image" (dict "Src" .installUnderline "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-2" "Width" "2px" "Height" "2px") }}
