change ozone workflow content

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -173,7 +173,7 @@
 
       <div class="mr-10 pt-5 self-end text-end">
         <p class="font-archivo-black">Ozone Prediction</p>
-        <p class="font-archivo max-w-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
+        <p class="font-archivo max-w-lg text-justify">Utilizing ground observations from the EPA and AirNow network, alongside remote sensing data, to calibrate CMAQ model for ozone prediction. </p>
       </div>
     </div>
   </div>
