updated snowcast & cmaq-geoweaver links

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -164,15 +164,22 @@
       <hr/>
 
       <div class="ml-10 pt-2">
-        <div>
-          <p class="font-archivo-black">SWE Wormhole</p>
-          <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        <div class="flex hover:underline hover:cursor-pointer">
+          <a href="https://github.com/geo-smart/SnowCast" target="_blank" class="flex">
+            <p class="font-archivo-black">SWE Wormhole</p>
+            <i class="fa-solid fa-arrow-up-right-from-square ml-4 mt-1"></i>
+          </a>
         </div>
         <p class="font-archivo max-w-lg">The SWE Workflow leverages Geoweaver, to help manage the complex python & shell scripts which are used to collect training data from various sources like GridMET, SRTM 90m, Modis and AMSR which is used to train the model to predict SWE in the western US.</p>
       </div>
 
       <div class="mr-10 pt-5 self-end text-end">
-        <p class="font-archivo-black">Ozone Prediction</p>
+        <div class="flex flex-end justify-end hover:underline hover:cursor-pointer">
+          <a href="https://github.com/earth-artificial-intelligence/cmaq-geoweaver" target="_blank" class="flex">
+            <p class="font-archivo-black">Ozone Prediction</p>
+            <i class="fa-solid fa-arrow-up-right-from-square ml-4 mt-1"></i>
+          </a>
+        </div>
         <p class="font-archivo max-w-lg text-justify">Utilizing ground observations from the EPA and AirNow network, alongside remote sensing data, to calibrate CMAQ model for ozone prediction. </p>
       </div>
     </div>
