--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -12,37 +12,38 @@
           and workflow orchestration.</p>
       <p class="hidden max-md:flex text-white text-center align-middle pt-8 p-0">An open-source, in-browser tool for simplifying data processing workflows with high-performance server support, featuring code history and workflow orchestration.</p>
 
-      <div class="pt-10 align-middle text-center">
 
-        <div class="flex flex-row align-center text-center justify-center max-sm:justify-around">
-          <a href="https://github.com/ESIPFed/Geoweaver" class="mr-10 nax-sm:ml-10">
+      <div class="pt-10 text-center">
+        <div class="flex flex-row justify-center space-x-4 sm:space-x-0 sm:flex-col">
+          <a href="https://github.com/ESIPFed/Geoweaver" class="flex justify-center mb-4 sm:mb-4">
             <div class="bg-white p-2 rounded cursor-pointer">
-              <button class="text-black flex items-center ml-2 mr-2">
-                <i class="fa-brands fa-github mr-2 ml-1"></i>
+              <button class="text-black flex items-center">
+                <i class="fa-brands fa-github mr-2"></i>
                 Github
               </button>
             </div>
           </a>
 
-          <a href="#" class="mr-10">
+          <a href="#" class="flex justify-center mb-4 sm:mb-4">
             <div class="bg-[#009AC4] p-2 rounded cursor-pointer">
-              <button class="text-white flex items-center ml-2 mr-2">
-                <i class="fa-solid fa-video mr-2 ml-1"></i>
+              <button class="text-white flex items-center">
+                <i class="fa-solid fa-video mr-2"></i>
                 Guide
               </button>
             </div>
           </a>
 
-          <a href="https://geobrain.csiss.gmu.edu/Geoweaver" class="max-sm:mr-10">
+          <a href="https://geobrain.csiss.gmu.edu/Geoweaver" class="flex justify-center mb-4 sm:mb-0">
             <div class="bg-white p-2 rounded cursor-pointer">
-              <button class="text-black flex items-center ml-2 mr-2">
-                <i class="fa-solid fa-desktop mr-2 ml-1"></i>
+              <button class="text-black flex items-center">
+                <i class="fa-solid fa-desktop mr-2"></i>
                 Demo
               </button>
             </div>
           </a>
         </div>
       </div>
+
     </div>
   </div>
 
